--- a/resume.tex
+++ b/resume.tex
@@ -52,10 +52,8 @@
 	
 	\textbf{University of California, Santa Barbara} \hfill \textit{2021-Present} \\ 
 	B.S./M.S. in Mechanical Engineering \\
-	Minor in Linguistics \smallskip \\
-	Member of Eta Kappa Nu \\
-	Member of Upsilon Pi Epsilon \\
-	Overall GPA: 5.678
+	Deans Honors in Engineering \\
+	Upper-division GPA: 3.86
 	
 \end{rSection}
 
@@ -86,7 +84,7 @@
 
 %------------------------------------------------
 
-	\begin{rSubsection}{TinySoft}{January 2008 - April 2010}{Web Designer \& Developer}{Gainesville, GA}
+	\begin{rSubsection}{Office Depot}{June 2021 - September 2023}{Sales Associate}{Los Gatos, CA}
 		\item Vivamus PostgreSQL fermentum semper porta. Nunc diam velit PHP, adipiscing ut tristique vitae
 		\item Maecenas convallis ullamcorper ultricies stylesheets.
 		\item Quisque mi metus, unit tests CSS ornare sit amet fermentum et, tincidunt et orci.
