--- a/resume.tex
+++ b/resume.tex
@@ -48,13 +48,10 @@
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
-\begin{rSection}{Education}
-	
-	\textbf{University of California, Santa Barbara} \hfill \textit{2021-Present} \\ 
+\begin{rSection}{Education}	
+	\textbf{University of California at Santa Barbara} \hfill \textit{2021-Present} \\ 
 	B.S./M.S. in Mechanical Engineering \\
-	Deans Honors in Engineering \\
-	Upper-division GPA: 3.86
-	
+	Upper-division GPA: 3.86 \\
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -63,7 +60,7 @@
 
 \begin{rSection}{Experience}
 
-	\begin{rSubsection}{ACME, Inc}{October 2010 - Present}{Web Developer}{Palo Alto, CA}
+	\begin{rSubsection}{Biological Control Lab}{September 2024 - Present}{Undergraduate Researcher}{UC Santa Barbara}
 		\item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus.
 		\item Donec et mollis dolor. Praesent et diam eget libero Adobe Coldfusion egestas mattis sit amet vitae augue.
 		\item Nam tincidunt congue enim, ut porta lorem Microsoft SQL lacinia consectetur.
@@ -74,21 +71,20 @@
 
 %------------------------------------------------
 
-	\begin{rSubsection}{AJAX Hosting}{December 2009 - October 2010}{Lead Developer}{Austin, TX}
-		\item Aenean ut gravida lorem. Ut turpis felis, Perl pulvinar a semper sed, adipiscing id dolor.
-		\item Curabitur dapibus enim sit amet elit pharetra tincidunt website feugiat nisl imperdiet. Ut convallis AJAX libero in urna ultrices accumsan.
-		\item Cum sociis natoque penatibus et magnis dis MySQL parturient montes, nascetur ridiculus mus.
-		\item In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.
-		\item Nullam cursus suscipit nisi, et ultrices justo sodales nec. Fusce venenatis facilisis lectus ac semper.
+	\begin{rSubsection}{Multiscale and Multiphase Lab}{September 2023 - June 2024}{Undergraduate Researcher}{UC Santa Barbara}
+		\item Research focused on the the pinch-off behavior of viscoeleastic fiber suspensions.
+		\item Created experimental setups to characterize behavior
+		\item Image processing and analysis in Fiji ImageJ and Python
+		\item Mathematical modelling of fluid behavior
 	\end{rSubsection}
 
 %------------------------------------------------
 
 	\begin{rSubsection}{Office Depot}{June 2021 - September 2023}{Sales Associate}{Los Gatos, CA}
-		\item Vivamus PostgreSQL fermentum semper porta. Nunc diam velit PHP, adipiscing ut tristique vitae
-		\item Maecenas convallis ullamcorper ultricies stylesheets.
-		\item Quisque mi metus, unit tests CSS ornare sit amet fermentum et, tincidunt et orci.
-		\item Curabitur venenatis pulvinar tellus gravida ornare. Sed et erat faucibus nunc euismod ultricies ut id
+		\item Assisted customers in finding what the needed, making desisions, and making decisions.
+		\item Managed logistics and inventory
+		\item Cooperated with sales team
+		\item Perfect attendance
 	\end{rSubsection}
 
 \end{rSection}
@@ -100,14 +96,18 @@
 \begin{rSection}{Technical Strengths}
 
 	\begin{tabular}{@{} >{\bfseries}l @{\hspace{6ex}} l @{}}
-		Computer Languages & Prolog, Haskell, AWK, Erlang, Scheme, ML \\
 		Protocols \& APIs & XML, JSON, SOAP, REST \\
 		Databases & MySQL, PostgreSQL, Microsoft SQL \\
-		Tools & SVN, Vim, Emacs
+		Tools & SolidWorks, Simulink, LabVIEW
+		Programming Languages & Python, MATLAB, C\#, C++, Rust 
 	\end{tabular}
 
 \end{rSection}
 
+\begin{rSection}{Honors and Awards}
+	\item Deans Honors for Engineering
+	\item National Merit Scholar
+\end{rSection}
 %----------------------------------------------------------------------------------------
 %	EXAMPLE SECTION
 %----------------------------------------------------------------------------------------
