--- a/resume.tex
+++ b/resume.tex
@@ -98,7 +98,7 @@
 	\begin{tabular}{@{} >{\bfseries}l @{\hspace{6ex}} l @{}}
 		Protocols \& APIs & XML, JSON, SOAP, REST \\
 		Databases & MySQL, PostgreSQL, Microsoft SQL \\
-		Tools & SolidWorks, Simulink, LabVIEW
+		Tools & SolidWorks, Simulink, LabVIEW \\
 		Programming Languages & Python, MATLAB, C\#, C++, Rust 
 	\end{tabular}
 
