--- a/resume.tex
+++ b/resume.tex
@@ -44,7 +44,10 @@
 %----------------------------------------------------------------------------------------
 
 \begin{document}
+\begin{rSection}{Focus}
+	I'm a fourth year B.S./M.S. student in Mechanical Engineering looking for an internship in summer 2025, preferably with 
 
+\end{rSection}
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
@@ -66,12 +69,12 @@
 		\item Nam tincidunt congue enim, ut porta lorem Microsoft SQL lacinia consectetur.
 		\item Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 		\item Pellentesque auctor nisi id magna consequat JavaScript sagittis.
-		\item Aliquam at massa ipsum. Quisque bash bibendum purus convallis nulla ultrices ultricies.
+		\item Work with large team of researchers
 	\end{rSubsection}
 
 %------------------------------------------------
 
-	\begin{rSubsection}{Multiscale and Multiphase Lab}{September 2023 - June 2024}{Undergraduate Researcher}{UC Santa Barbara}
+	\begin{rSubsection}{Multiphase and Multiscale Flow Lab}{September 2023 - June 2024}{Undergraduate Researcher}{UC Santa Barbara}
 		\item Research focused on the the pinch-off behavior of viscoeleastic fiber suspensions.
 		\item Created experimental setups to characterize behavior
 		\item Image processing and analysis in Fiji ImageJ and Python
