--- a/resume.tex
+++ b/resume.tex
@@ -44,9 +44,10 @@
 %----------------------------------------------------------------------------------------
 
 \begin{document}
-\begin{rSection}{Focus}
-	I'm a fourth year B.S./M.S. student in Mechanical Engineering looking for an internship in summer 2025, preferably with 
 
+\begin{rSection}{Focus}
+	I'm a fourth year B.S./M.S. student in Mechanical Engineering looking for an internship in the summer of 2025. 
+	I'm  passionate about Dynamics and Control, but am also interested in fluid mechanics, machine learning, mechatronics, and design.
 \end{rSection}
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -64,21 +65,20 @@
 \begin{rSection}{Experience}
 
 	\begin{rSubsection}{Biological Control Lab}{September 2024 - Present}{Undergraduate Researcher}{UC Santa Barbara}
-		\item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus.
-		\item Donec et mollis dolor. Praesent et diam eget libero Adobe Coldfusion egestas mattis sit amet vitae augue.
-		\item Nam tincidunt congue enim, ut porta lorem Microsoft SQL lacinia consectetur.
-		\item Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-		\item Pellentesque auctor nisi id magna consequat JavaScript sagittis.
-		\item Work with large team of researchers
+		\item Systems biology approach to gene expression
+		\item Focus on DNA supercoiling dynamics
+		\item Modelling complex nonlinear ODEs
+		\item Application of both data-driven and classical controls methods.
+		\item Work and collaborate with large team of researchers
 	\end{rSubsection}
 
 %------------------------------------------------
 
 	\begin{rSubsection}{Multiphase and Multiscale Flow Lab}{September 2023 - June 2024}{Undergraduate Researcher}{UC Santa Barbara}
 		\item Research focused on the the pinch-off behavior of viscoeleastic fiber suspensions.
-		\item Created experimental setups to characterize behavior
+		\item Created experimental setups to characterize fluid behavior
 		\item Image processing and analysis in Fiji ImageJ and Python
-		\item Mathematical modelling of fluid behavior
+		\item Mathematical modelling of system
 	\end{rSubsection}
 
 %------------------------------------------------
@@ -96,21 +96,19 @@
 %	TECHNICAL STRENGTHS SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Technical Strengths}
+\begin{rSection}{Strengths}
 
 	\begin{tabular}{@{} >{\bfseries}l @{\hspace{6ex}} l @{}}
-		Protocols \& APIs & XML, JSON, SOAP, REST \\
-		Databases & MySQL, PostgreSQL, Microsoft SQL \\
+		Areas & Dynamcs, Controls, Machine Learning, Mechatronics \\
 		Tools & SolidWorks, Simulink, LabVIEW \\
-		Programming Languages & Python, MATLAB, C\#, C++, Rust 
+		Programming Languages & Python, MATLAB, C\#, C++, Rust \\
+		Honors and Awards & Deans Honors for Engineering, National Merit Scholar \\
 	\end{tabular}
 
+
 \end{rSection}
 
-\begin{rSection}{Honors and Awards}
-	\item Deans Honors for Engineering
-	\item National Merit Scholar
-\end{rSection}
+
 %----------------------------------------------------------------------------------------
 %	EXAMPLE SECTION
 %----------------------------------------------------------------------------------------
