--- a/resume.tex
+++ b/resume.tex
@@ -46,8 +46,8 @@
 \begin{document}
 
 \begin{rSection}{Focus}
-	I'm a fourth year B.S./M.S. student in Mechanical Engineering looking for an internship in the summer of 2025. 
-	I'm  passionate about Dynamics and Control, but am also interested in fluid mechanics, machine learning, mechatronics, and design.
+	I am a fourth year B.S./M.S. student in Mechanical Engineering seeking an internship in the summer of 2025. 
+	I am  passionate about Dynamics and Control, but am also interested in Fluid Mechanics, Machine Learning, Mechatronics, and Design.
 \end{rSection}
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -68,14 +68,14 @@
 		\item Systems biology approach to gene expression
 		\item Focus on DNA supercoiling dynamics
 		\item Modelling complex nonlinear ODEs
-		\item Application of both data-driven and classical controls methods.
+		\item Application of both data-driven and classical controls methods
 		\item Work and collaborate with large team of researchers
 	\end{rSubsection}
 
 %------------------------------------------------
 
 	\begin{rSubsection}{Multiphase and Multiscale Flow Lab}{September 2023 - June 2024}{Undergraduate Researcher}{UC Santa Barbara}
-		\item Research focused on the the pinch-off behavior of viscoeleastic fiber suspensions.
+		\item Research focused on the the pinch-off behavior of viscoeleastic fiber suspensions
 		\item Created experimental setups to characterize fluid behavior
 		\item Image processing and analysis in Fiji ImageJ and Python
 		\item Mathematical modelling of system
@@ -84,7 +84,7 @@
 %------------------------------------------------
 
 	\begin{rSubsection}{Office Depot}{June 2021 - September 2023}{Sales Associate}{Los Gatos, CA}
-		\item Assisted customers in finding what the needed, making desisions, and making decisions.
+		\item Provided customer service, answering questions and making rccommendations
 		\item Managed logistics and inventory
 		\item Cooperated with sales team
 		\item Perfect attendance
@@ -98,8 +98,8 @@
 
 \begin{rSection}{Strengths}
 
-	\begin{tabular}{@{} >{\bfseries}l @{\hspace{6ex}} l @{}}
-		Areas & Dynamcs, Controls, Machine Learning, Mechatronics \\
+	\begin{tabular}{@{} >{\bfseries}l @{\hspace{33ex}} r @{}}
+		Areas & Dynamics, Controls, Machine Learning, Mechatronics \\
 		Tools & SolidWorks, Simulink, LabVIEW \\
 		Programming Languages & Python, MATLAB, C\#, C++, Rust \\
 		Honors and Awards & Deans Honors for Engineering, National Merit Scholar \\
