--- a/resume.tex
+++ b/resume.tex
@@ -84,9 +84,9 @@
 %------------------------------------------------
 
 	\begin{rSubsection}{Office Depot}{June 2021 - September 2023}{Sales Associate}{Los Gatos, CA}
-		\item Provided customer service, answering questions and making rccommendations
+		\item Provided customer service, answering questions and making recommendations
+		\item Supplied technical support 
 		\item Managed logistics and inventory
-		\item Cooperated with sales team
 		\item Perfect attendance
 	\end{rSubsection}
 
@@ -98,7 +98,7 @@
 
 \begin{rSection}{Strengths}
 
-	\begin{tabular}{@{} >{\bfseries}l @{\hspace{33ex}} r @{}}
+	\begin{tabular}{@{} >{\bfseries}l @{\hspace{6ex}} l @{}}
 		Areas & Dynamics, Controls, Machine Learning, Mechatronics \\
 		Tools & SolidWorks, Simulink, LabVIEW \\
 		Programming Languages & Python, MATLAB, C\#, C++, Rust \\
