--- a/resume.tex
+++ b/resume.tex
@@ -75,7 +75,7 @@
 %------------------------------------------------
 
 	\begin{rSubsection}{Multiphase and Multiscale Flow Lab}{September 2023 - June 2024}{Undergraduate Researcher}{UC Santa Barbara}
-		\item Research focused on the the pinch-off behavior of viscoeleastic fiber suspensions
+		\item Research focused on the pinch-off behavior of viscoeleastic fiber suspensions
 		\item Created experimental setups to characterize fluid behavior
 		\item Image processing and analysis in Fiji ImageJ and Python
 		\item Mathematical modelling of system
