--- a/resume.tex
+++ b/resume.tex
@@ -78,7 +78,7 @@
 		\item Research focused on the pinch-off behavior of viscoeleastic fiber suspensions
 		\item Created experimental setups to characterize fluid behavior
 		\item Image processing and analysis in Fiji ImageJ and Python
-		\item Mathematical modelling of system
+		\item Mathematical modeling of system
 	\end{rSubsection}
 
 %------------------------------------------------
